++stream toList converted phase 2.